--- a/app.json
+++ b/app.json
@@ -11,7 +11,8 @@
     "pages/cover-view/cover-view",
     "pages/alert/alert",
     "pages/listPage/listPage",
-    "pages/test/test"
+    "pages/test/test",
+    "pages/sup/sup"
   ],
   "window":{
     "backgroundTextStyle":"light",
@@ -33,7 +34,7 @@
         },
         {
           "text": "我的",
-         "pagePath": "pages/listPage/listPage"
+         "pagePath": "pages/test/test"
         }
       ]
     }
